--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@craftkit/craft-widget-quicktools",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "Widgets for your first Craft-UIKit application",
   "main": "index.js",
   "module": "index.js",
   "unpkg": "dist/craft-widget-quicktools.min.js",
   "dependencies": {
-    "craft-uikit": "https://github.com/craftkit/craft-uikit"
+    "@craftkit/craft-uikit": "^2.x",
   },
   "devDependencies": {},
   "scripts": {
