--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@craftkit/craft-widget-quicktools",
-  "version": "2.0.3",
+  "version": "3.0.0",
   "description": "Widgets for your first Craft-UIKit application",
   "main": "index.js",
   "module": "index.js",
   "unpkg": "dist/craft-widget-quicktools.min.js",
   "dependencies": {
-    "@craftkit/craft-uikit": "^2.x"
+    "@craftkit/craft-uikit": "*"
   },
   "devDependencies": {},
   "scripts": {
